fix(tippy): sometimes not showing up
Clicking on the share link button in the filters didn't make the popup
with the link appear. Now, it's shown in the wrong position (top-left),
but we will get back to that later.

--- a/app/assets/stylesheets/modules/email-popup.scss
+++ b/app/assets/stylesheets/modules/email-popup.scss
@@ -1,10 +1,10 @@
 .email-popup {
   animation: show-up 125ms ease;
+  padding: .3125rem .5625rem;
   width: 200px;
   z-index: $popup-z-index;
 
-  &.tippy-tooltip.light-border-theme {
-    color: initial;
+  &.tippy-box {
     position: absolute;
     bottom: 56px;
     left: 11px;
