--- a/app/assets/stylesheets/modules/tooltip.scss
+++ b/app/assets/stylesheets/modules/tooltip.scss
@@ -1,8 +1,4 @@
-.tippy-tooltip {
-  &.light-border-theme {
-    text-align: left;
-  }
-
+.tippy-content {
   input {
     border: 1px solid #ddd;
     margin: 0.5em 0;
